# tristar

./: MANIFEST.in  README.md  pyproject.toml
tristar/: modules.txt  patches.txt
tristar/config/: desktop.py
tristar/public/css/: tristar.css
tristar/public/js/: tristar.js
tristar/setup/: install.py
tristar/tristar_hr/: tasks.py
tristar/tristar_manufacturing/doctype/pce_grade/: pce_grade.py
tristar/tristar_manufacturing/doctype/production_batch/: production_batch.json  production_batch.py
tristar/tristar_manufacturing/doctype/quality_control_test/: quality_control_test.py
tristar/tristar_reports/report/batch_quality_report/: batch_quality_report.json  batch_quality_report.py
tristar/tristar_reports/report/pce_production_summary/: pce_production_summary.json  pce_production_summary.py
tristar/tristar_sales/: utils.py
tristar/tristar_sales/doctype/customer_technical_request/: customer_technical_request.json
tristar_app/: README.md  setup.py
tristar_app/tristar/: hooks.py
tristar_app/tristar/translations/: ar.csv
tristar_app/tristar/tristar_hr/: utils.py
tristar_app/tristar/tristar_manufacturing/: tasks.py  utils.py
tristar_app/tristar/tristar_manufacturing/doctype/pce_grade/: pce_grade.json
tristar_app/tristar/tristar_manufacturing/doctype/quality_control_test/: quality_control_test.json
tristar_app/tristar/tristar_sales/doctype/customer_technical_request/: customer_technical_request.py
